...
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:importantForAccessibility="no" />

                <!--目录按钮-->
                <LinearLayout
                    android:id="@+id/ll_catalog"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/chapter_list"
                    android:focusable="true"
...
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:importantForAccessibility="no" />

                <!--调节按钮-->
                <LinearLayout
                    android:id="@+id/ll_read_aloud"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/read_aloud"
                    android:focusable="true"
...
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:importantForAccessibility="no" />

                <!--界面按钮-->
                <LinearLayout
                    android:id="@+id/ll_font"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/interface_setting"
                    android:focusable="true"
...
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:importantForAccessibility="no" />

                <!--设置按钮-->
                <LinearLayout
                    android:id="@+id/ll_setting"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/setting"
                    android:focusable="true"
...
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:importantForAccessibility="no"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_memo"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/book_memo"
                    android:focusable="true"
...
